--- a/css/style.css
+++ b/css/style.css
@@ -29,20 +29,19 @@
   align-items: center;
 }
 
-.button-index {
+.button-hero {
   background-color: var(--accent);
   color: var(--white);
   border-radius: 4px;
+  border: none;
+  cursor: pointer;
 
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  text-decoration: none;
-  text-align: center;
-
-  display: inline-block;
+  
   padding: 10px 32px;
   margin-top: 30px;
 }
@@ -168,6 +167,8 @@
   fill: var(--icon-color);
   justify-content: center;
   align-items: center;
+
+  transition: fill var(--animation-time) var(--animation-function);
 }
 
 .client-icon {
@@ -194,6 +195,8 @@
   font-size: 16px;
   line-height: 1.62;
   letter-spacing: 0.03em;
+
+  transition: background-color var(--animation-time) var(--animation-function), color var(--animation-time) var(--animation-function), box-shadow var(--animation-time) var(--animation-function);
 }
 
 .button-portfolio:hover,
@@ -235,6 +238,8 @@
 .projects a {
   text-decoration: none;
   display: block;
+
+  transition: box-shadow var(--animation-time) var(--animation-function);
 }
 
 .projects a:hover {
