--- a/css/main.css
+++ b/css/main.css
@@ -118,17 +118,6 @@ section {
   margin-left: auto;
 }
 
-.header-nav,
-.list-nav,
-.header-contacts,
-.benefits,
-.activity,
-.team,
-.button-list,
-.projects {
-  display: flex;
-}
-
 /* Стилі для хедера */
 
 header .container {
@@ -142,7 +131,12 @@ header,
   align-items: center;
 }
 
+.header-nav {
+  display: flex;
+}
+
 .list-nav {
+  display: flex;
   margin-left: 93px;
 }
 
@@ -164,7 +158,7 @@ header,
 
 .header-nav li a {
   display: inline-block;
-  padding: 17px 0px;
+  padding: 32px 0px;
   text-decoration: none;
   color: inherit;
 
@@ -178,7 +172,34 @@ header,
   color: var(--accent);
 }
 
+.header-nav li {
+  position: relative;
+}
+
+.header-nav li a::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  background-color: var(--accent);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  opacity: 0;
+  transition: opacity var(--animation-time) var(--animation-function);
+}
+
+.header-nav .current::after {
+  opacity: 1;
+}
+
+.header-nav li a:hover::after,
+.header-nav li a:focus::after {
+  opacity: 1;
+}
+
 .header-contacts {
+  display: flex;
   align-items: center;
 }
 
@@ -212,7 +233,8 @@ header,
   align-items: center;
   fill: var(--icon-color);
 
-  transition: background-color var(--animation-time) var(--animation-function), fill var(--animation-time) var(--animation-function);
+  transition: background-color var(--animation-time) var(--animation-function),
+    fill var(--animation-time) var(--animation-function);
 }
 
 .social-icon {
@@ -304,7 +326,8 @@ footer .container {
   width: 528px;
   height: 581px;
   border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: var(--white);
 }
 
