--- a/css/main.css
+++ b/css/main.css
@@ -304,31 +304,70 @@ footer .container {
 
 /* BackDrop */
 
-.backdrop-service {
+.service-backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity var(--animation-time) var(--animation-function);
 }
 
-.backdrop-service.is-hidden {
+.service-backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
 
-.modal-service {
+.service-modal {
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  position: absolute;
+  transform: translateX(-50%) translateY(-50%) scale(1);
   width: 528px;
   height: 581px;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: var(--white);
+  /* background-color: green; */
+
+  transition: transform var(--animation-time) var(--animation-function);
+}
+
+.service-backdrop.is-hidden .service-modal {
+  transform: translateX(-50%) translateY(-50%) scale(0.5);
+}
+
+.servise-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  background-color: var(--white);
+  fill: var(--black);
+
+  border: none;
+  padding: 0px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+
+  transition: fill var(--animation-time) var(--animation-function),
+    background-color var(--animation-time) var(--animation-function);
+}
+
+.servise-button-icon {
+  fill: inherit;
+}
+
+.servise-button:hover,
+.servise-button:focus {
+  fill: var(--white);
+  background-color: var(--accent);
 }
 
 /* Додаткові стилі */
