--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,35 @@
   margin-left: -30px;
 }
 
+.project-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-overlay {
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+
+  transform: translateY(100%);
+  transition: transform var(--animation-time) var(--animation-function);
+}
+
+.project-item:hover .project-overlay {
+  transform: translateY(0);
+}
+
+.project-overlay p {
+  color: var(--white);
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+}
+
 .project-item {
   flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
